fix: prepare release and complete C++/Java algorithm coverage
Add 182 attributed Java implementations, completing Java for all 927 algorithm tasks; keep 74 SQL tasks explicitly separate. Add 48-adaptation differential tests, full Java compilation, and documented C++/JDK17 fixes.

Add scoped MIT and complete third-party license notices, immutable source locks, canonical filename validation, complete generated index/coverage, and read-only automatic CI. Make repository-writing workflows manual and remove obsolete batch reports.

Repository visibility is unchanged. GitHub description/topics and final release CI confirmation remain in RELEASE_CHECKLIST.md.